--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,16 +55,16 @@ jobs:
       - name: Run linter (ruff)
         run: ruff check .
 
-      - name: Run mypy (optional)
-        run: uv pip install mypy && mypy .
+      #- name: Run mypy (optional)
+       # run: uv pip install mypy && mypy .
 
-      - name: Run tests
-        run: pytest --cov=your_package --cov-report=xml
+     # - name: Run tests
+      #  run: pytest --cov=your_package --cov-report=xml
 
-      - name: Upload coverage report
-        uses: codecov/codecov-action@v4
-        with:
-          file: ./coverage.xml
+     # - name: Upload coverage report
+      #  uses: codecov/codecov-action@v4
+       # with:
+        #  file: ./coverage.xml
 
   # Optionally, add a job for Docker build
   #docker-build:
