--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest  # can add matrix for Windows (see below)
+    runs-on: ubuntu-latest
     strategy:
         matrix:
             os: [ubuntu-latest, windows-latest]
@@ -51,7 +51,7 @@ jobs:
 
       - name: Initialize database
         run: |
-          psql -h localhost -U testuser -d postgres -c "CREATE DATABASE testdb;"
+          psql -h localhost -U testuser -d postgres -c "SELECT 'CREATE DATABASE testdb' WHERE NOT EXISTS (SELECT FROM pg_database WHERE datname = 'testdb')\gexec"
         env:
           PGPASSWORD: testpass
 
