--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,14 +40,17 @@ jobs:
       - name: Create virtual environment
         run: python -m venv .venv
 
+      - name: Install uv
+        run: pip install uv
+
       - name: Cache uv virtualenv
         uses: actions/cache@v4
         with:
           path: .venv
           key: ${{ runner.os }}-venv-${{ hashFiles('**/pyproject.toml') }}
 
-      - name: Install uv
-        run: pip install uv
+      - name: Enter virtual environment
+        run: . .venv/bin/activate
 
       - name: Initialize database
         run: |
