--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,11 @@ jobs:
       - name: Enter virtual environment
         run: . .venv/bin/activate
 
+      - name: Install dependencies with uv
+        run: |
+          uv pip install .
+        shell: bash
+
       - name: Initialize database
         run: |
           psql -h localhost -U testuser -d postgres -c "DO \$\$ BEGIN IF NOT EXISTS (SELECT FROM pg_database WHERE datname = 'testdb') THEN CREATE DATABASE testdb; END IF; END \$\$;"
@@ -59,7 +64,7 @@ jobs:
           PGPASSWORD: testpass
 
       - name: Run formatter (ruff format)
-        run: uv pip install ruff && ruff format --check .
+        run: ruff format --check .
 
       - name: Run linter (ruff)
         run: ruff check .
