--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,11 @@ dependencies = [
     "sqlalchemy>=2.0.40",
     "uvicorn>=0.34.2",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.11.11",
+]
 # [build-system]
 # requires = ["uv_build>=0.7.3,<0.8.0"]
 # build-backend = "uv_build"
